fix alignment of top part to be centered withing a 1000px rectangle

--- a/style.css
+++ b/style.css
@@ -1,18 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
 body{
     display: flex;
     flex-direction: column;
     font-family: Roboto, sans-serif;
     width:1440px;
-
     box-sizing: border-box;
 }
 
 header, .hero-mid{
-    margin-left: 8em;
-    margin-right: 8em;
-    margin-top: 1em;
+    margin-top: 36px;
 }
 
 
@@ -20,12 +17,16 @@ header, .hero-mid{
 .hero{
     background-color: #1F2937;
     height: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 
 header{
  display: flex;
  justify-content: space-around;
+ width: 1000px;
  /* padding: 16px;    */
 }
 
@@ -59,7 +60,8 @@ li a {
 .hero-mid{
     display: flex;
     justify-content: space-between;
-    margin-top: 100px;
+    margin-top: 124px;
+    width: 1000px;
 }
 
 .hero-left-side{
@@ -83,10 +85,10 @@ li a {
     max-width: 100px;
     padding: 8px;
     margin-top: 16px;
-    border: 1px solid white;
     background-color: #3882F6;
     border-radius: 10px;
-    color:#F9FAF8
+    color:#F9FAF8;
+    width: 100px;
   }
 
 /* SECOND SECTION */
@@ -148,7 +150,7 @@ li a {
   
   .quote{
     font-size: 36px;
-    font-weight: lighter;
+    font-weight: 300;
     font-style:italic;
     color: #1F2937;
 
@@ -193,5 +195,8 @@ li a {
     height: 100px;
     justify-content: center;
     color: #F9FAF8;
-
   }
+
+button.signup{
+  border: 1px solid white;
+}
